<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Kotonoha</string>
  <string name="preloading">Please wait, loading words from server.</string>
  <string name="show_word">Show words</string>
  <string name="load_words">Load words</string>
  <string name="word_form_name">Words</string>
  <string name="no_examples">No examples for this word</string>
  <string name="next_word">Show next word</string>
  <string name="voice_recognition_prompt">Recognize</string>
  <string name="speak_button">Speak</string>
  <string name="record_audio">Record</string>
  <string name="voice_record_act_name">Voice recognition form</string>
  <string name="login">Login</string>
  <string name="bad_card">Mark card as bad</string>
  <string name="login_qr">Login via QR code</string>
  <string name="login_browser">Login via browser</string>
  <string name="login_form_message">
    You can login by using 2 ways to Kotonoha Android. Either go to
    Client Authorizations, create login info for android, press
    QR code button and scan it or login via web. When using second
    way you would need to enter your login info.
  </string>
  <string name="login_method_info">Select login method</string>
  <string name="settings">Settings</string>
  <string name="perf_fontsize">Font Size</string>

  <string-array name="login_methods">
    <item>QR code</item>
    <item>Browser</item>
  </string-array>

</resources>
