<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:orientation="vertical">
  <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/statusText"
            android:text="@string/preloading" android:background="#ff0000ff"/>
  <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
                android:orientation="horizontal">
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/show_word"
            android:id="@+id/showWordBtn" android:clickable="false"/>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/load_words"
            android:id="@+id/preloadWordsBtn" android:clickable="false"/>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/record_audio"
            android:id="@+id/record" android:clickable="true"/>
  </LinearLayout>
  <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent">
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/login"
            android:id="@+id/login_btn" android:clickable="true" />
  </LinearLayout>
</LinearLayout>
